# k3rs

./: .gitignore  Cargo.toml  Containerfile.dev  README.md  spec.md
.github/workflows/: initrd.yml  kernel.yml  release.yml
cmd/k3rs-agent/: Cargo.toml
cmd/k3rs-agent/src/: api.rs  cache.rs  cli.rs  connectivity.rs  heartbeat.rs  main.rs  recovery.rs  registration.rs  store.rs  tests.rs  vpc_client.rs
cmd/k3rs-agent/src/loops/: image_report.rs  mod.rs  pod_sync.rs  reconnect.rs  route_sync.rs
cmd/k3rs-dev/: Cargo.toml
cmd/k3rs-dev/src/: main.rs
cmd/k3rs-init/: Cargo.toml  build.rs
cmd/k3rs-init/src/: container.rs  dhcp.rs  ebpf.rs  filesystem.rs  logging.rs  main.rs  networking.rs  oci_spec.rs  signals.rs  vsock.rs
cmd/k3rs-server/: Cargo.toml
cmd/k3rs-server/src/: main.rs
cmd/k3rs-ui/: Cargo.toml  Dioxus.toml  tailwind.css
cmd/k3rs-ui/assets/: main.css  tailwind.css
cmd/k3rs-ui/src/: api.rs  main.rs
cmd/k3rs-ui/src/pages/: configmaps.rs  dashboard.rs  deployments.rs  events.rs  images.rs  ingress.rs  mod.rs  network_policies.rs  nodes.rs  pods.rs  process_list.rs  quotas.rs  secrets.rs  services.rs  volumes.rs  vpc_peerings.rs  vpcs.rs  workloads.rs
cmd/k3rs-vmm/: Cargo.toml  Package.swift  k3rs-vmm.entitlements
cmd/k3rs-vmm/.build/: plugin-tools.yaml  release.yaml
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/: plugin-tools-description.json
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/ArgumentParser-tool.build/: output-file-map.json
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/ArgumentParser-tool.build/include/: module.modulemap
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/ArgumentParser.build/: output-file-map.json
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/ArgumentParser.build/include/: module.modulemap
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/ArgumentParserToolInfo-tool.build/: output-file-map.json
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/ArgumentParserToolInfo-tool.build/include/: module.modulemap
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/ArgumentParserToolInfo.build/: output-file-map.json
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/ArgumentParserToolInfo.build/include/: module.modulemap
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/generate_docc_reference-tool.build/: output-file-map.json
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/generate_docc_reference.build/: output-file-map.json
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/generate_manual-tool.build/: output-file-map.json
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/generate_manual.build/: output-file-map.json
cmd/k3rs-vmm/.build/arm64-apple-macosx/release/k3rs_vmm.build/: output-file-map.json
cmd/k3rs-vmm/Sources/: VMManager.swift  main.swift
cmd/k3rs-vmm/src/: ipc.rs  linux_vm.rs  main.rs  vm.rs  vm_delegate.rs  vsock.rs
cmd/k3rs-vpc/: Cargo.toml  build.rs  k3rs-vpc.service
cmd/k3rs-vpc-common/: Cargo.toml
cmd/k3rs-vpc-common/src/: lib.rs
cmd/k3rs-vpc-ebpf/: Cargo.toml
cmd/k3rs-vpc-ebpf/src/: main.rs
cmd/k3rs-vpc/src/: allocator.rs  ebpf_enforcer.rs  enforcer.rs  lib.rs  main.rs  nftables.rs  noop_enforcer.rs  protocol.rs  socket.rs  store.rs  sync.rs  wireguard.rs
cmd/k3rs-vpc/tests/: e2e_networking.rs  enforcer_ebpf.rs  enforcer_noop.rs
cmd/k3rsctl/: Cargo.toml
cmd/k3rsctl/src/: cli.rs  main.rs
cmd/k3rsctl/src/commands/: apply.rs  backup.rs  cluster.rs  delete.rs  describe.rs  doctor.rs  exec.rs  get.rs  logs.rs  mod.rs  node.rs  runtime.rs
cmd/k3rsctl/src/pm/: dev.rs  install.rs  lifecycle.rs  list.rs  logs.rs  mod.rs  registry.rs  startup.rs  status.rs  tui.rs  types.rs  watchdog.rs
example/: test-alpine.yaml  test-nginx.yaml
pkg/api/: Cargo.toml
pkg/api/src/: auth.rs  lib.rs  request_id.rs  server.rs
pkg/api/src/handlers/: backup.rs  cluster.rs  drain.rs  endpoints.rs  exec.rs  heartbeat.rs  images.rs  mod.rs  processes.rs  register.rs  resources.rs  runtime.rs  vpc.rs  watch.rs
pkg/constants/: Cargo.toml
pkg/constants/src/: auth.rs  capabilities.rs  dns.rs  lib.rs  network.rs  paths.rs  runtime.rs  state.rs  timings.rs  vm.rs
pkg/container/: Cargo.toml
pkg/container/src/: backend.rs  firecracker.rs  image.rs  installer.rs  kernel.rs  lib.rs  rootfs.rs  runtime.rs  state.rs  virt.rs  vm_utils.rs
pkg/container/src/firecracker/: api.rs  installer.rs  jailer.rs  mod.rs  network.rs  rootfs.rs
pkg/container/src/linux/firecracker/: api.rs  installer.rs  jailer.rs  mod.rs
pkg/container/src/macos/: virt.rs
pkg/controllers/: Cargo.toml
pkg/controllers/src/: backup.rs  cronjob.rs  daemonset.rs  deployment.rs  endpoint.rs  eviction.rs  hpa.rs  job.rs  lib.rs  node.rs  replicaset.rs  restore_watcher.rs  vpc.rs
pkg/metrics/: Cargo.toml
pkg/metrics/src/: lib.rs
pkg/network/: Cargo.toml
pkg/network/src/: bridge.rs  cni.rs  dns.rs  lib.rs  netns.rs  pfnat.rs  switch.rs  utun.rs  wireguard.rs
pkg/network/src/linux/: bridge.rs  mod.rs  netns.rs
pkg/network/src/macos/: mod.rs  pfnat.rs  switch.rs  utun.rs
pkg/pki/: Cargo.toml
pkg/pki/src/: ca.rs
pkg/proxy/: Cargo.toml
pkg/proxy/src/: ingress_proxy.rs  lib.rs  service_proxy.rs  tunnel.rs
pkg/scheduler/: Cargo.toml
pkg/scheduler/src/: lib.rs
pkg/state/: Cargo.toml
pkg/state/src/: client.rs  leader.rs  lib.rs  watch.rs
pkg/types/: Cargo.toml
pkg/types/src/: backup.rs  config.rs  configmap.rs  daemonset.rs  deployment.rs  endpoint.rs  hpa.rs  ingress.rs  job.rs  lease.rs  lib.rs  namespace.rs  network_policy.rs  node.rs  pod.rs  quota.rs  rbac.rs  replicaset.rs  secret.rs  service.rs  validate.rs  volume.rs  vpc.rs
pkg/vpc/: Cargo.toml
pkg/vpc/src/: cluster_id.rs  constants.rs  ghost_ipv6.rs  lib.rs
scripts/: build-k3rs-init.sh  build-kernel.sh  build-release.sh  build-vmm.sh  cleanup-network.sh  cleanup-port.sh  copy-vmlinux.sh  dev-agent.sh  dev-podman.sh  dev-server.sh  dev-ui.sh  dev.sh  k3rs-init.sh  setup-podman-kvm.sh  tag-release.sh  test-recovery.sh  test-resilience.sh
