[workspace]
resolver = "2"
members = [
    "cmd/k3rs-server",
    "cmd/k3rs-agent",
    "cmd/k3rsctl",
    "pkg/api",
    "pkg/container",
    "pkg/controllers",
    "pkg/network",
    "pkg/pki",
    "pkg/proxy",
    "pkg/scheduler",
    "pkg/state",
    "pkg/types"
]

[workspace.dependencies]
# Dependencies will be managed here centrally as the project grows
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
pingora = { version = "0.7.0" }
async-trait = "0.1.89"
anyhow = "1.0.102"
slatedb = "0.10.1"
axum = "0.8.8"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
clap = { version = "4.5.23", features = ["derive"] }
uuid = { version = "1.16", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
