[workspace]
resolver = "2"
members = [
    "cmd/k3rs-server",
    "cmd/k3rs-agent",
    "cmd/k3rsctl",
    "cmd/k3rs-vmm",
    "pkg/constants",
    "pkg/api",
    "pkg/container",
    "pkg/controllers",
    "pkg/metrics",
    "pkg/network",
    "pkg/pki",
    "pkg/proxy",
    "pkg/scheduler",
    "pkg/state",
    "pkg/types",
    "pkg/vpc",
    "cmd/k3rs-ui",
    "cmd/k3rs-init",
    "cmd/k3rs-vpc",
    "cmd/k3rs-vpc-common",
]
# Note: cmd/k3rs-vpc-ebpf is NOT a workspace member — it targets bpfel-unknown-none
# and must be built separately via aya-build (see cmd/k3rs-vpc/build.rs).
# k3rs-init is Linux-only (guest PID 1) — excluded from default builds on macOS.
# k3rs-vmm is macOS-only (Virtualization.framework) — excluded from default builds on Linux.
# Build explicitly: cargo build -p k3rs-vmm (macOS) / cargo build -p k3rs-init --target x86_64-unknown-linux-musl (Linux)
default-members = [
    "cmd/k3rs-server",
    "cmd/k3rs-agent",
    "cmd/k3rsctl",
    "pkg/constants",
    "pkg/api",
    "pkg/container",
    "pkg/controllers",
    "pkg/metrics",
    "pkg/network",
    "pkg/pki",
    "pkg/proxy",
    "pkg/scheduler",
    "pkg/state",
    "pkg/types",
    "pkg/vpc",
    "cmd/k3rs-ui",
]

[workspace.dependencies]
# Dependencies will be managed here centrally as the project grows
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
pingora = { version = "0.8.0" }
pingora-load-balancing = { version = "0.8.0" }
async-trait = "0.1.89"
anyhow = "1.0.102"
slatedb = "0.11.0"
axum = { version = "0.8.8", features = ["ws"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
clap = { version = "4.5.23", features = ["derive"] }
uuid = { version = "1.16", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
sysinfo = "0.38"
tokio-tungstenite = { version = "0.28", features = ["connect"] }
futures-util = "0.3"
pkg-constants = { path = "pkg/constants" }
crossterm = "0.29.0"
flate2 = "1.0"
nix = { version = "0.31.2", features = ["signal", "process"] }
aya = "0.13"
aya-log = "0.2"
