[package]
name = "k3rs-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
serde_yaml = { workspace = true }
pkg-types = { path = "../../pkg/types" }
pkg-proxy = { path = "../../pkg/proxy" }
pkg-container = { path = "../../pkg/container" }
pkg-network = { path = "../../pkg/network" }
