[package]
name = "k3rs-ui"
version = "0.1.0"
authors = ["Aitthi Arsa <meanstack20@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.10", features = ["lucide"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:reqwest"]
desktop = ["dioxus/desktop"]
