[package]
name = "k3rs-vmm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "k3rs-vmm"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
objc2 = { version = "0", features = ["std", "exception"] }
objc2-foundation = "0"
objc2-virtualization = "0"
block2 = "0"
dispatch2 = "*"
signal-hook = "0"
libc = "*"
