[package]
name = "k3rs-vmm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "k3rs-vmm"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
objc2 = { version = "0", features = ["std", "exception"] }
objc2-foundation = { version = "0", features = ["NSFileHandle"] }
objc2-virtualization = { version = "0", features = ["VZFileHandleNetworkDeviceAttachment", "VZNetworkDeviceAttachment"] }
block2 = "0"
dispatch2 = "*"
signal-hook = "0"
libc = "*"
pkg-constants = { workspace = true }
