[package]
name = "k3rs-vpc"
version = "0.1.0"
edition = "2024"

[lib]
name = "k3rs_vpc"
path = "src/lib.rs"

[[bin]]
name = "k3rs-vpc"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
slatedb = { workspace = true }
async-trait = { workspace = true }
pkg-types = { path = "../../pkg/types" }
pkg-constants = { path = "../../pkg/constants" }
pkg-vpc = { path = "../../pkg/vpc" }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
k3rs-vpc-common = { path = "../k3rs-vpc-common" }

[build-dependencies]
aya-build = { version = "0.1", optional = true }

[features]
default = []
ebpf = ["aya-build"]
