[package]
name = "k3rsctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
pkg-types = { path = "../../pkg/types" }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
