[package]
name = "pkg-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
pkg-types = { path = "../types" }
pkg-pki = { path = "../pki" }
pkg-state = { path = "../state" }
pkg-scheduler = { path = "../scheduler" }
pkg-controllers = { path = "../controllers" }
