[package]
name = "pkg-container"
version = "0.1.0"
edition = "2024"
[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
oci-client = "0.14"
flate2 = "1.1"
tar = "0.4"
async-trait = "0.1"
dashmap = "6"
reqwest = { workspace = true }
libc = "0.2"
