[package]
name = "pkg-controllers"
version = "0.1.0"
edition = "2024"

[dependencies]
pkg-types = { path = "../types" }
pkg-state = { path = "../state" }
pkg-container = { path = "../container" }
pkg-scheduler = { path = "../scheduler" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
